--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <b>Week</b>
 <a href="week1.html"><b>1</b></a>
 <a href="week2.html"><b>2</b></a>
-<a href="week3.html"><b>3P</b></a><br>
+<a href="week3.html"><b>3</b></a>
+<a href="week4.html"><b>4P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -60,45 +61,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Rich(5)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2180</font></td>
+    <td><font size=2>1220</font></td>
+    <td><font size=2>945</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1840</font></td>
+    <td><font size=2>1720</font></td>
+    <td><font size=2>735</font></td>
+    <td><font size=2>490</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1505</font></td>
-    <td><font size=2>1070</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1685</font></td>
+    <td><font size=2>2015</font></td>
     <td><font size=2>890</font></td>
-    <td><font size=2>615</font></td>
+    <td><font size=2>180</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Rich(5)</font></td>
+<tr><td><font size=2>Randy(9)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1235</font></td>
-    <td><font size=2>1040</font></td>
-    <td><font size=2>765</font></td>
-    <td><font size=2>470</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1105</font></td>
-    <td><font size=2>1190</font></td>
-    <td><font size=2>615</font></td>
-    <td><font size=2>490</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>945</font></td>
+    <td><font size=2>1310</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(1)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1295</font></td>
-    <td><font size=2>1505</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>1905</font></td>
+    <td><font size=2>2125</font></td>
     <td><font size=2>735</font></td>
     <td><font size=2>560</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Randy(9)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>680</font></td>
-    <td><font size=2>1150</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>335</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -108,45 +109,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Roger(10)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1220</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>670</font></td>
-    <td><font size=2>550</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1130</font></td>
-    <td><font size=2>815</font></td>
-    <td><font size=2>595</font></td>
+    <td><font size=2>1755</font></td>
+    <td><font size=2>1240</font></td>
+    <td><font size=2>625</font></td>
     <td><font size=2>535</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Mike(2)</font></td>
+<tr><td><font size=2>Roger(10)</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1175</font></td>
-    <td><font size=2>1375</font></td>
-    <td><font size=2>730</font></td>
-    <td><font size=2>445</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>1750</font></td>
+    <td><font size=2>1605</font></td>
+    <td><font size=2>670</font></td>
+    <td><font size=2>530</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1035</font></td>
-    <td><font size=2>1040</font></td>
+    <td><font size=2>1655</font></td>
+    <td><font size=2>1650</font></td>
     <td><font size=2>630</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Mike(2)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1335</font></td>
+    <td><font size=2>1640</font></td>
+    <td><font size=2>730</font></td>
+    <td><font size=2>160</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>John(8)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1075</font></td>
-    <td><font size=2>1400</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>1500</font></td>
+    <td><font size=2>2025</font></td>
     <td><font size=2>610</font></td>
-    <td><font size=2>465</font></td>
+    <td><font size=2>425</font></td>
     <td><font size=2>0</font></td>
 </table>
 </table>
