--- a/freeagt.html
+++ b/freeagt.html
@@ -1,100 +1,109 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 3)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 4)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Drake Maye             </td><td><font size=3> 415</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Matthew Stafford       </td><td><font size=3> 380</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Geno Smith             </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Matthew Stafford       </td><td><font size=3> 645</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3> 490</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Geno Smith             </td><td><font size=3> 440</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 380</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Russell Wilson         </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Mac Jones              </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Bryce Young            </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Spencer Rattler        </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Michael Penix          </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Michael Penix          </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Mac Jones              </td><td><font size=3> 310</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Bryce Young            </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Spencer Rattler        </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 215</td></tr>
 <tr><td><font size=3>12)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 120</td></tr>
 <tr><td><font size=3>13)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Carson Wentz           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Joe Burrow             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
+<tr><td><font size=3>Antonio Gibson         </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>Antonio Gibson         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Kenneth Gainwell       </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>Kendre Miller          </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Emari Demercado        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Miles Sanders          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Kenneth Gainwell       </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Zavier Scott           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Rico Dowdle            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Kareem Hunt            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Austin Ekeler          </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Raheem Mostert         </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Chris Rodriguez        </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Tyrone Tracy           </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
 <tr><td><font size=3>Tre Tucker             </td><td><font size=3> 420</td></tr>
-<tr><td><font size=3>Keenan Allen           </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>Michael Pittman        </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Tyquan Thornton        </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Tyquan Thornton        </td><td><font size=3> 310</td></tr>
+<tr><td><font size=3>Michael Pittman        </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>Parker Washington      </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>DeAndre Hopkins        </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Marvin Mims            </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Luke McCaffrey         </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Kalif Raymond          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Malik Washington       </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 195</td></tr>
 <tr><td><font size=3>Calvin Austin          </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>Luke McCaffrey         </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Tutu Atwell            </td><td><font size=3> 165</td></tr>
 <tr><td><font size=3>Cedric Tillman         </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Devontez Walker        </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Kayshon Boutte         </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Dyami Brown            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Ryan Miller            </td><td><font size=3> 100</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Hunter Henry           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Davis Allen            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>AJ Barner              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Luke Farrell           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Jake Ferguson          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Cole Kmet              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Hunter Long            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Josh Oliver            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jack Stoll             </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Brock Wright           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Brenton Strange        </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Noah Fant              </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>John FitzPatrick       </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Jake Tonges            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Davis Allen            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>AJ Barner              </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jake Ferguson          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Hunter Long            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Darren Waller          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Luke Farrell           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Cole Kmet              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Josh Oliver            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Jack Stoll             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Tommy Tremble          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Brock Wright           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Brenton Strange        </td><td><font size=3>  55</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 465</td></tr>
-<tr><td><font size=3>Spencer Shrader        </td><td><font size=3> 360</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>Will Reichard          </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 265</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>Cam Little             </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Joshua Karty           </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>Andre Szmyt            </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>John Parker Romo       </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3> 465</td></tr>
+<tr><td><font size=3>Spencer Shrader        </td><td><font size=3> 460</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Will Reichard          </td><td><font size=3> 375</td></tr>
+<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>Cam Little             </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>Joshua Karty           </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>John Parker Romo       </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>Andre Szmyt            </td><td><font size=3> 220</td></tr>
+<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 210</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Tory Horton            </td><td><font size=3> 375</td></tr>
 <tr><td><font size=3>Jaylin Lane            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Mitchell Evans         </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Jackson Hawes          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Raheim Sanders         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Isaiah Bond            </td><td><font size=3>  25</td></tr>
 <tr><td><font size=3>Tahj Brooks            </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Jalen Milroe           </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Kyle Williams          </td><td><font size=3>   0</td></tr>
