--- a/week5.html
+++ b/week5.html
@@ -25,7 +25,7 @@
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Judkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hampton</td>       <td></td><td align=right>0</td></tr>
@@ -70,9 +70,9 @@
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Egbuka</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Shrader</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Loop</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -129,7 +129,7 @@
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Samuel</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fannin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Blue</td>          <td></td><td align=right>0</td></tr>
@@ -139,10 +139,10 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (8)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Marks</td>         <td></td><td align=right>0</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
