--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
-<a href="week5.html"><b>5P</b></a><br>
+<a href="week5.html"><b>5</b></a>
+<a href="week6.html"><b>6P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -63,42 +64,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(5)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2765</font></td>
-    <td><font size=2>1635</font></td>
+    <td><font size=2>3360</font></td>
+    <td><font size=2>2090</font></td>
     <td><font size=2>945</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>States(3)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2140</font></td>
-    <td><font size=2>3135</font></td>
+    <td><font size=2>2945</font></td>
+    <td><font size=2>3790</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2125</font></td>
-    <td><font size=2>2635</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2655</font></td>
+    <td><font size=2>3300</font></td>
     <td><font size=2>735</font></td>
     <td><font size=2>285</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(9)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1860</font></td>
-    <td><font size=2>1595</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2315</font></td>
+    <td><font size=2>2190</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(1)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2600</font></td>
-    <td><font size=2>2580</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3205</font></td>
+    <td><font size=2>3265</font></td>
     <td><font size=2>735</font></td>
     <td><font size=2>560</font></td>
     <td><font size=2>0</font></td>
@@ -110,44 +111,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2795</font></td>
-    <td><font size=2>2040</font></td>
-    <td><font size=2>1040</font></td>
-    <td><font size=2>535</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2870</font></td>
-    <td><font size=2>2060</font></td>
+    <td><font size=2>3555</font></td>
+    <td><font size=2>2665</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>530</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Grant(6)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3135</font></td>
+    <td><font size=2>2825</font></td>
+    <td><font size=2>1040</font></td>
+    <td><font size=2>340</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2070</font></td>
-    <td><font size=2>2235</font></td>
-    <td><font size=2>630</font></td>
+    <td><font size=2>2855</font></td>
+    <td><font size=2>2575</font></td>
+    <td><font size=2>785</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(2)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2135</font></td>
-    <td><font size=2>2680</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2790</font></td>
+    <td><font size=2>3485</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>160</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>John(8)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>1955</font></td>
-    <td><font size=2>2720</font></td>
-    <td><font size=2>610</font></td>
+    <td><font size=2>2620</font></td>
+    <td><font size=2>3250</font></td>
+    <td><font size=2>665</font></td>
     <td><font size=2>425</font></td>
     <td><font size=2>0</font></td>
 </table>
